@@ -1,16 +1,5 @@
 package dev.langchain4j.model.chat.request.json;
 
-import dev.langchain4j.model.output.structured.Description;
-
-import java.lang.reflect.Field;
-import java.lang.reflect.ParameterizedType;
-import java.lang.reflect.Type;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.LinkedHashMap;
-import java.util.Map;
-import java.util.Optional;
-
 import static dev.langchain4j.internal.TypeUtils.isJsonBoolean;
 import static dev.langchain4j.internal.TypeUtils.isJsonInteger;
 import static dev.langchain4j.internal.TypeUtils.isJsonNumber;
@@ -19,43 +8,52 @@ import static dev.langchain4j.internal.Utils.generateUUIDFrom;
 import static java.lang.reflect.Modifier.isStatic;
 import static java.util.Arrays.stream;
 
+import dev.langchain4j.model.output.structured.Description;
+import java.lang.reflect.Field;
+import java.lang.reflect.ParameterizedType;
+import java.lang.reflect.Type;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.UUID;
+import java.util.stream.Collectors;
+
 public class JsonSchemaElementHelper {
+
+    private static final String DEFAULT_UUID_DESCRIPTION = "String in a UUID format";
 
     public static JsonSchemaElement jsonSchemaElementFrom(Class<?> clazz) {
         return jsonSchemaElementFrom(clazz, clazz, null, new LinkedHashMap<>());
     }
 
-    public static JsonSchemaElement jsonSchemaElementFrom(Class<?> clazz,
-                                                          Type type,
-                                                          String fieldDescription,
-                                                          Map<Class<?>, VisitedClassMetadata> visited) {
+    public static JsonSchemaElement jsonSchemaElementFrom(
+            Class<?> clazz, Type type, String fieldDescription, Map<Class<?>, VisitedClassMetadata> visited) {
         if (isJsonString(clazz)) {
             return JsonStringSchema.builder()
-                    .description(fieldDescription)
+                    .description(Optional.ofNullable(fieldDescription).orElse(descriptionFrom(clazz)))
                     .build();
         }
 
         if (isJsonInteger(clazz)) {
-            return JsonIntegerSchema.builder()
-                    .description(fieldDescription)
-                    .build();
+            return JsonIntegerSchema.builder().description(fieldDescription).build();
         }
 
         if (isJsonNumber(clazz)) {
-            return JsonNumberSchema.builder()
-                    .description(fieldDescription)
-                    .build();
+            return JsonNumberSchema.builder().description(fieldDescription).build();
         }
 
         if (isJsonBoolean(clazz)) {
-            return JsonBooleanSchema.builder()
-                    .description(fieldDescription)
-                    .build();
+            return JsonBooleanSchema.builder().description(fieldDescription).build();
         }
 
         if (clazz.isEnum()) {
             return JsonEnumSchema.builder()
-                    .enumValues(stream(clazz.getEnumConstants()).map(Object::toString).toList())
+                    .enumValues(stream(clazz.getEnumConstants())
+                            .map(Object::toString)
+                            .collect(Collectors.toList()))
                     .description(Optional.ofNullable(fieldDescription).orElse(descriptionFrom(clazz)))
                     .build();
         }
@@ -77,10 +75,8 @@ public class JsonSchemaElementHelper {
         return jsonObjectOrReferenceSchemaFrom(clazz, fieldDescription, visited, false);
     }
 
-    public static JsonSchemaElement jsonObjectOrReferenceSchemaFrom(Class<?> type,
-                                                                    String description,
-                                                                    Map<Class<?>, VisitedClassMetadata> visited,
-                                                                    boolean setDefinitions) {
+    public static JsonSchemaElement jsonObjectOrReferenceSchemaFrom(
+            Class<?> type, String description, Map<Class<?>, VisitedClassMetadata> visited, boolean setDefinitions) {
         if (visited.containsKey(type) && isCustomClass(type)) {
             VisitedClassMetadata visitedClassMetadata = visited.get(type);
             JsonSchemaElement jsonSchemaElement = visitedClassMetadata.jsonSchemaElement;
@@ -91,9 +87,8 @@ public class JsonSchemaElementHelper {
         }
 
         String reference = generateUUIDFrom(type.getName());
-        JsonReferenceSchema jsonReferenceSchema = JsonReferenceSchema.builder()
-                .reference(reference)
-                .build();
+        JsonReferenceSchema jsonReferenceSchema =
+                JsonReferenceSchema.builder().reference(reference).build();
         visited.put(type, new VisitedClassMetadata(jsonReferenceSchema, reference, false));
 
         Map<String, JsonSchemaElement> properties = new LinkedHashMap<>();
@@ -103,18 +98,14 @@ public class JsonSchemaElementHelper {
                 continue;
             }
             String fieldDescription = descriptionFrom(field);
-            JsonSchemaElement jsonSchemaElement = jsonSchemaElementFrom(
-                    field.getType(),
-                    field.getGenericType(),
-                    fieldDescription,
-                    visited
-            );
+            JsonSchemaElement jsonSchemaElement =
+                    jsonSchemaElementFrom(field.getType(), field.getGenericType(), fieldDescription, visited);
             properties.put(fieldName, jsonSchemaElement);
         }
 
         JsonObjectSchema.Builder builder = JsonObjectSchema.builder()
                 .description(Optional.ofNullable(description).orElse(descriptionFrom(type)))
-                .properties(properties)
+                .addProperties(properties)
                 .required(new ArrayList<>(properties.keySet()));
 
         visited.get(type).jsonSchemaElement = builder.build();
@@ -139,6 +130,9 @@ public class JsonSchemaElementHelper {
     }
 
     private static String descriptionFrom(Class<?> type) {
+        if (type == UUID.class) {
+            return DEFAULT_UUID_DESCRIPTION;
+        }
         return descriptionFrom(type.getAnnotation(Description.class));
     }
 
@@ -150,7 +144,7 @@ public class JsonSchemaElementHelper {
     }
 
     private static Class<?> getActualType(Type type) {
-        if (type instanceof ParameterizedType parameterizedType) {
+        if (type instanceof final ParameterizedType parameterizedType) {
             Type[] actualTypeArguments = parameterizedType.getActualTypeArguments();
             if (actualTypeArguments.length == 1) {
                 return (Class<?>) actualTypeArguments[0];
@@ -175,21 +169,35 @@ public class JsonSchemaElementHelper {
     }
 
     public static Map<String, Map<String, Object>> toMap(Map<String, JsonSchemaElement> properties) {
+        return toMap(properties, false);
+    }
+
+    public static Map<String, Map<String, Object>> toMap(Map<String, JsonSchemaElement> properties, boolean strict) {
         Map<String, Map<String, Object>> map = new LinkedHashMap<>();
-        properties.forEach((property, value) -> map.put(property, toMap(value)));
+        properties.forEach((property, value) -> map.put(property, toMap(value, strict)));
         return map;
     }
 
     public static Map<String, Object> toMap(JsonSchemaElement jsonSchemaElement) {
+        return toMap(jsonSchemaElement, false);
+    }
+
+    public static Map<String, Object> toMap(JsonSchemaElement jsonSchemaElement, boolean strict) {
         if (jsonSchemaElement instanceof JsonObjectSchema jsonObjectSchema) {
             Map<String, Object> properties = new LinkedHashMap<>();
             properties.put("type", "object");
             if (jsonObjectSchema.description() != null) {
                 properties.put("description", jsonObjectSchema.description());
             }
-            properties.put("properties", toMap(jsonObjectSchema.properties()));
+            properties.put("properties", toMap(jsonObjectSchema.properties(), strict));
             if (jsonObjectSchema.required() != null) {
                 properties.put("required", jsonObjectSchema.required());
+            }
+            if (strict) {
+                properties.put("additionalProperties", false);
+            }
+            if (jsonObjectSchema.definitions() != null) {
+                properties.put("$defs", toMap(jsonObjectSchema.definitions(), strict));
             }
             return properties;
         } else if (jsonSchemaElement instanceof JsonArraySchema jsonArraySchema) {
@@ -198,7 +206,7 @@ public class JsonSchemaElementHelper {
             if (jsonArraySchema.description() != null) {
                 properties.put("description", jsonArraySchema.description());
             }
-            properties.put("items", toMap(jsonArraySchema.items()));
+            properties.put("items", toMap(jsonArraySchema.items(), strict));
             return properties;
         } else if (jsonSchemaElement instanceof JsonEnumSchema jsonEnumSchema) {
             Map<String, Object> properties = new LinkedHashMap<>();
@@ -235,6 +243,23 @@ public class JsonSchemaElementHelper {
             if (jsonBooleanSchema.description() != null) {
                 properties.put("description", jsonBooleanSchema.description());
             }
+            return properties;
+        } else if (jsonSchemaElement instanceof JsonReferenceSchema) {
+            Map<String, Object> properties = new LinkedHashMap<>();
+            String reference = ((JsonReferenceSchema) jsonSchemaElement).reference();
+            if (reference != null) {
+                properties.put("$ref", "#/$defs/" + reference);
+            }
+            return properties;
+        } else if (jsonSchemaElement instanceof JsonAnyOfSchema jsonAnyOfSchema) {
+            Map<String, Object> properties = new LinkedHashMap<>();
+            if (jsonAnyOfSchema.description() != null) {
+                properties.put("description", jsonAnyOfSchema.description());
+            }
+            List<Map<String, Object>> anyOf = jsonAnyOfSchema.anyOf().stream()
+                    .map(element -> toMap(element, strict))
+                    .collect(Collectors.toList());
+            properties.put("anyOf", anyOf);
             return properties;
         } else {
             throw new IllegalArgumentException("Unknown type: " + jsonSchemaElement.getClass());
